# tc-pl4-exercises

./: CMakeLists.txt  CORRECTIONS.md  LICENSE  README  README.md
cmake/: tcpppl-util.cmake  util.cmake
src/: CMakeLists.txt
src/06-types-declarations/: CMakeLists.txt
src/07-pointers-arrays-references/: CMakeLists.txt  declarations.cc  find_substring.cc  notwice.cc
src/08-structures-unions-enumerations/: CMakeLists.txt  season.cc
src/09-statements/: CMakeLists.txt  atoi.cc  itoa.cc
src/10-expressions/: CMakeLists.txt  calculator.cc
src/99-misc/: CMakeLists.txt
src/99-misc/stack-unwinding/: CMakeLists.txt
src/misc/: CMakeLists.txt  README  temporary.cc
src/pointers-arrays-references/: CMakeLists.txt  alias.cc
src/stack-unwinding/: CMakeLists.txt  README  main.cc
src/types-declarations/: CMakeLists.txt
src/types-declarations/numeric-limits/: CMakeLists.txt  main.cc
src/types-declarations/string-loop/: CMakeLists.txt  main.cc
test/: CMakeLists.txt  common.sh
test/07-pointers-arrays-references/: CMakeLists.txt  find_substring.sh  notwice.sh
test/08-structures-unions-enumerations/: CMakeLists.txt  season.sh
test/09-statements/: CMakeLists.txt  atoi.sh  itoa.sh
test/10-expressions/: CMakeLists.txt  calculator.sh
