set(TC++PL_TARGET_NAME 07-pointers-arrays-references)

add_executable(${TC++PL_TARGET_NAME}_declarations declarations.cc)
add_executable(${TC++PL_TARGET_NAME}_alias alias.cc)
add_executable(${TC++PL_TARGET_NAME}_notwice notwice.cc)
add_executable(${TC++PL_TARGET_NAME}_find_substring find_substring.cc)
